[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
diesel  =  "2.3.9"
log = "0.4.29"
serde = {version = "1.0.228", features = ["derive"]}
uuid ="1.23.1"
validator = "0.20.0"
db = {path = "../db"}
redis = "1.2.1"
serde_json = "1.0.149"
once_cell = "1.21.4"
