[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
env_logger = "0.11.10"
log = "0.4.29"
rand = "0.10.1"
redis = "1.2.1"
rust_decimal = "1.42.0"
rust_decimal_macros = "1.40.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = "1.52.3"
uuid = "1.23.1"
